test/sematest/invalid/multiple_main.java
class System {
    public Out out;
    public static void main(String[] args) {
        System.out.println(1);
    }
}

class Out{
    public void println() {
        System.out.println(1);
    }

    public static void main(String[] args) {
        System.out.println(1);
    }
}
